fix double scroll in editor

--- a/css/retry-timeout.css
+++ b/css/retry-timeout.css
@@ -10,13 +10,6 @@
  *******************************************************************************/
 #guide_content .codeeditor .CodeMirror {
     height: 100%;
-    border-bottom: none;
- }
- 
-.codeeditor {
-    height: 100%;
-    overflow: auto;
-    border-bottom: 1px solid black;
 }
 
 /** CSS for the dashboard **/
